--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ Flask-SQLAlchemy==2.3.2
 idna==2.7
 inflect==1.0.1
 ItsDangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 MarkupSafe==1.0
 mysql-connector==2.1.7
 requests==2.20.0
 sqlacodegen==1.1.6
-SQLAlchemy==1.2.12
-urllib3==1.24
+SQLAlchemy>=1.3.0
+urllib3==1.24.3
 Werkzeug==0.14.1
+gunicorn==19.9.0
